--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
 <html lang="en">
-    <head> neptunes site
-    <title>Neptune's Site</title>
+    <head neptunes site></head>
+    <title>welcome to my site</title>
 
-    </head>
-</html>
+    <body>
+        this is where you can find me!
+    </body>
