--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html> 
 <html lang="en">
-    <head neptunes site></head>
-    <title>welcome to my site</title>
+    <head> <title>neptunes site</title>
+    </head>
 
     <body>
         this is where you can find me!
     </body>
+
+</html>
