--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html> 
 <html lang="en">
-    <head> <title>neptunes site</title>
-    </head>
+    <head> <title>neptune</title></head>
 
     <body>
-        this is where you can find me!
+    <h1>neptunes site</h1>
+
+       <h2>this is where you can connect with me!</h2>
+
+    <a href="https://x.com/NeptuneTheGoat">twitter!</a>
+    <a href="https://www.youtube.com/@-.neptune.-">youtube!</a>
     </body>
 
 </html>
