--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head> <title>neptune</title></head>
 
     <body>
-    <h1>neptunes site</h1>
+       <h1>neptunes site</h1>
 
        <h2>this is where you can connect with me!</h2>
 
-    <a href="https://x.com/NeptuneTheGoat">twitter!</a>
-    <a href="https://www.youtube.com/@-.neptune.-">youtube!</a>
+        <ul>
+        <li><a href="https://x.com/NeptuneTheGoat">twitter!</a></li>
+        <li><a href="https://www.youtube.com/@-.neptune.-">youtube!</a></li>
+        </ul>
     </body>
 
 </html>
