--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
        <h2>this is where you can connect with me!</h2>
 
         <ul>
-        <li><a href="https://x.com/NeptuneTheGoat">twitter!</a></li>
-        <li><a href="https://www.youtube.com/@-.neptune.-">youtube!</a></li>
+        <li><a href="https://x.com/NeptuneTheGoat"target="_blank">twitter!</a></li>
+        <li><a href="https://www.youtube.com/@-.neptune.-"target="_blank">youtube!</a></li>
         </ul>
     </body>
 
