--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> 
 <html lang="en">
-    <head> <title>neptune</title></head>
+    <head> <link rel="stylesheet" href="style.css"> <link rel="icon" type="image/png" href="favicon.png">
+    <title>neptune</title>
+    </head>
 
     <body>
        <h1>neptunes site</h1>
