--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html> 
 <html lang="en">
-    <head> <link rel="stylesheet" href="style.css"> <link rel="icon" type="image/png" href="favicon.png">
-    <title>neptune</title>
+    <head>  
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="favicon.png">
+        
+        <title>neptune</title>
+
     </head>
 
     <body>
