--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
     </head>
 
     <body>
-       <h1>neptunes site</h1>
+        <video autoplay muted loop>
+            <source src="204.mp4" type="video/mp4">
+        </video>
 
-       <h2>this is where you can connect with me!</h2>
+       <h1>HI IM NEPTUNE!</h1>
 
+       <h2>THIS IS WHERE YOU CAN CONNECT WITH ME!</h2>
+
+       <div class="link-container">
         <ul>
-        <li><a href="https://x.com/NeptuneTheGoat"target="_blank">twitter!</a></li>
-        <li><a href="https://www.youtube.com/@-.neptune.-"target="_blank">youtube!</a></li>
+        <li><a href="https://x.com/NeptuneTheGoat"target="_blank">TWITTER!</a></li>
+        <li><a href="https://www.youtube.com/@-.neptune.-"target="_blank">YOUTUBE!</a></li>
         </ul>
+        </div>
     </body>
 
 </html>
