--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
        <div class="link-container">
         <ul>
-        <li><a href="https://x.com/NeptuneTheGoat"target="_blank">TWITTER!</a></li>
-        <li><a href="https://www.youtube.com/@-.neptune.-"target="_blank">YOUTUBE!</a></li>
+        <li><a href="https://x.com/NeptuneTheGoat"target="_blank"class="twitter-link">TWITTER!</a></li>
+        <li><a href="https://www.youtube.com/@-.neptune.-"target="_blank"class="youtube-link">YOUTUBE!</a></li>
         </ul>
         </div>
     </body>
