welcome page/button

--- a/index.html
+++ b/index.html
@@ -17,15 +17,24 @@
             <source src="204.mp4" type="video/mp4">
         </video>
 
+        <audio id="background-music"loop>
+            <source src="TIM.mp3" type="audio/mpeg">
+        </audio>
+       
+        <div id="landing-page">
+        <h1>WELCOME!</h1>
+        <button id="enter-button">ENTER</button>
+        </div>
+
+        <div id="main-site">
        <h1>HI IM NEPTUNE!</h1>
-
        <h2>THIS IS WHERE YOU CAN CONNECT WITH ME!</h2>
-
        <div class="link-container">
         <ul>
         <li><a href="https://x.com/NeptuneTheGoat"target="_blank"class="twitter-link">TWITTER!</a></li>
         <li><a href="https://www.youtube.com/@-.neptune.-"target="_blank"class="youtube-link">YOUTUBE!</a></li>
         </ul>
+        </div>
         </div>
     </body>
 
