--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         </ul>
         </div>
         </div>
+        <script>
+            document.getElementById('enter-button').addEventListener('click', function() {
+            document.getElementById('landing-page').style.display = 'none';
+            document.getElementById('main-site').style.display = 'block';
+            document.getElementById('background-music').play();
+            });
+        </script>
+
+
     </body>
 
 </html>
